CV index: fix layout on mobile

--- a/static/style.css
+++ b/static/style.css
@@ -173,10 +173,12 @@ img:hover:not(.nohover) {
     position: absolute;
 }
 
-.vertical {
-    position: relative;
-    top: 50%;
-    transform: translateY(50%);
+@media only screen and (min-width: 575px) {
+    .vertical {
+        position: relative;
+        top: 50%;
+        transform: translateY(50%);
+    }
 }
 
 @media only screen and (max-width: 575px) {
